# Speak-up

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
speak-up-backend/: Cargo.toml
speak-up-backend/src/: lib.rs  main.rs  server.rs
speak-up-backend/src/asr/: cloud.rs  local.rs  mod.rs
speak-up-backend/src/cleaner/: cloud.rs  local.rs  mod.rs
speak-up-backend/src/dictionary/: mod.rs
speak-up-backend/src/history/: mod.rs
speak-up-backend/src/models/: mod.rs
speak-up-backend/src/profiles/: mod.rs
speak-up-backend/src/providers/: mod.rs
speak-up-backend/src/session/: mod.rs
speak-up-client/: Cargo.toml  tauri.conf.json
speak-up-client/capabilities/: default.json
speak-up-client/icons/: icon.icns
speak-up-client/settings-ui/: index.html  wizard.html
speak-up-client/src/: backend.rs  keychain.rs  lib.rs  main.rs  tray.rs
speak-up-client/src/audio/: linux.rs  mod.rs
speak-up-client/src/context/: linux.rs  macos.rs  mod.rs  windows.rs
speak-up-client/src/hotkeys/: mod.rs
speak-up-client/src/injection/: linux.rs  macos.rs  mod.rs  windows.rs
speak-up-client/src/overlay/: mod.rs
speak-up-client/src/settings/: mod.rs
speak-up-core/: Cargo.toml
speak-up-core/src/: error.rs  ipc.rs  lib.rs  types.rs
