[workspace]
resolver = "2"
members = [
    "speak-up-core",
    "speak-up-client",
    "speak-up-backend",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Speak Up Contributors"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
tokio-stream = "0.1"
anyhow = "1"
speak-up-core = { path = "speak-up-core" }
