[package]
name = "speak-up-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
egui = "0.30"
egui-winit = "0.30"
egui-wgpu = "0.30"
wgpu = "23"
gpu-allocator = "0.28"
winit = "0.30"
pollster = "0.4"
bytemuck = "1"
cpal = "0.15"
ringbuf = "0.4"
enigo = "0.2"
global-hotkey = "0.7"
crossbeam-channel = "0.5"
tokio.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
arboard = "3"
keyring = "3"
device_query = "2"
uuid.workspace = true
dirs = "6"
speak-up-core.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = "0.13"
anyhow.workspace = true
